--- a/src/main/webapp/WEB-INF/vm/mobile/mobile_index.vm
+++ b/src/main/webapp/WEB-INF/vm/mobile/mobile_index.vm
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>去哪儿网校园招聘</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-	<!--<meta http-equiv="refresh"  content="5;/student/login" />-->
+	#if($flag!=0)
+	<meta http-equiv="refresh"  content="5;/student/refresh" />
+	#end
 	<link rel="stylesheet" href="/static/mobile/css/style.min.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/mobile/mobile.js"></script>
@@ -28,7 +30,7 @@
 							<div class="item">
 								<input id="name" name="name" type="text" placeholder="请输姓名">
 							</div>
-							<div id="showError" style="display: none">请填写手机号和姓名</div>
+							<div id="showError" style="display: none">${message}</div>
 						</div>
 						<div class="plane ani  pulse infinite"></div>
 					</div>
