--- a/src/main/webapp/WEB-INF/vm/mobile/mobile_index.vm
+++ b/src/main/webapp/WEB-INF/vm/mobile/mobile_index.vm
@@ -5,7 +5,7 @@
 	<title>去哪儿网校园招聘</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	#if($flag!=0)
-	<meta http-equiv="refresh"  content="5;/student/refresh" />
+	<meta http-equiv="refresh"  content="30;/student/refresh" />
 	#end
 	<link rel="stylesheet" href="/static/mobile/css/style.min.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
@@ -30,7 +30,7 @@
 							<div class="item">
 								<input id="name" name="name" type="text" placeholder="请输姓名">
 							</div>
-							<div id="showError" style="display: none">${message}</div>
+							<div id="showError" style="width:210px; height:20px; display:none;">${message}</div>
 						</div>
 						<div class="plane ani  pulse infinite"></div>
 					</div>
