--- a/src/main/webapp/WEB-INF/vm/mobile/mobile_login.vm
+++ b/src/main/webapp/WEB-INF/vm/mobile/mobile_login.vm
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<link rel="stylesheet" href="/static/mobile/css/style.min.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
-	<script type="text/javascript" src="/static/mobile/mobile_index.js"></script>
+	<script type="text/javascript" src="/static/mobile/mobile.js"></script>
 </head>
 <body>
 	<div class="wrap">
@@ -16,13 +16,22 @@
 		<img class="balloon_right ani fade-in-up" src="/static/mobile/images/balloon-right.png" width="20.78%" alt="">
 		<img class="title ani fade-in elastic-x delay100" src="/static/mobile/images/title.png" width="80.78%" alt="">		
 		<div class="con">
-			<div class="step step_2 ani fade-in" style="display: ">
-				<div class="form">
-					<div class="text" id="msg">
-						${message}
+			<div class="step step_1 ani fade-in" style="display: ">
+				<form id="registForm" name="registForm" action="" method="post">
+					<div class="form">
+						<div class="box">
+							<div class="item">
+								<input id="phone" name="phone" type="number" placeholder="请输入手机号">
+							</div>
+							<div class="item">
+								<input id="name" name="name" type="text" placeholder="请输姓名">
+							</div>
+							<div id="showError" style="width:210px; height:20px; display:none;">${message}</div>
+						</div>
+						<div class="plane ani  pulse infinite"></div>
 					</div>
-					<div class="plane ani  pulse infinite"></div>
-				</div>
+					<div id="regist" class="btn ani  stretch delay300"></div>
+				</form>
 			</div>
 		</div>
 	</div>
