--- a/src/main/webapp/WEB-INF/vm/mobile/mobile_index.vm
+++ b/src/main/webapp/WEB-INF/vm/mobile/mobile_index.vm
@@ -22,6 +22,7 @@
 						${message}
 					</div>
 					<div class="plane ani  pulse infinite"></div>
+					<input type="hidden" id="flag" name="flag" value="${flag}"/>
 				</div>
 			</div>
 		</div>
