--- a/src/main/webapp/WEB-INF/static/assets/css/style.css
+++ b/src/main/webapp/WEB-INF/static/assets/css/style.css
@@ -1,4 +1,4 @@
-ï»¿/*
+/*
  *
  * Template Name: Fullscreen Login
  * Description: Login Template with Fullscreen Background Slideshow
@@ -180,12 +180,22 @@ button:active {
     -ms-transition: all .2s;
 }
 
-.connect a.facebook { background: url(../img/facebook.png) center center no-repeat; }
-.connect a.twitter { background: url(../img/twitter.png) center center no-repeat; }
+.msg {
+	display: none;
+	text-align: center;
+    width: 350px;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 10px;
+    color: red;
+}
+
+.connect a.facebook { background: url(/static/assets/img/facebook.png) center center no-repeat; }
+.connect a.twitter { background: url(/static/assets/img/twitter.png) center center no-repeat; }
 
 .connect a:hover { background-position: center bottom; }
 
-/*ï¼ï¼ï¼å¢åŠ éƒ¨ä»½çš„CSSï¼ï¼ï¼*/
+/*£­£­£­Ôö¼Ó²¿·İµÄCSS£­£­£­*/
 form,input,button{font-family:Microsoft YaHei,Segoe UI,Tahoma,Arial,Verdana,sans-serif; text-decoration:none; width:100%;}
 button.submit_button{ font-size:24px; letter-spacing:15px;}
 input.Captcha{ width:130px; float:left;}
