--- a/src/main/webapp/WEB-INF/vm/hr_index.vm
+++ b/src/main/webapp/WEB-INF/vm/hr_index.vm
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>校招系统</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/module.css" />
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/static/css/style.css" />
+	<link rel="stylesheet" href="/static/css/module.css" />
 </head>
 <body>
 	<div class="l-fullsreen">
