--- a/src/main/webapp/WEB-INF/vm/hr_index.vm
+++ b/src/main/webapp/WEB-INF/vm/hr_index.vm
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/module.css" />
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/recruit/view.js"></script>
 </head>
 <body>
 	<div class="l-fullsreen">
@@ -31,14 +33,14 @@
 						<a href="#">首页</a>
 					</li>
 					<li><a href="#">面试平台</a></li>
-					<li><a href="#">面试管理</a></li>
-					<li><a href="#">面试学生管理</a></li>
+					<li><a href="javascript:void(0);" id="view_list">面试官管理</a></li>
+					<li><a href="#">候选人管理</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="l-container">
-			<div class="l-sidebar"></div>
-			<div class="l-content"></div>
+			<!--<div class="l-sidebar"></div>-->
+			<div id="content" class="l-content"></div>
 		</div>
 	</div>
 </body>
