--- a/src/main/webapp/WEB-INF/vm/viewer_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_manage.vm
@@ -6,45 +6,19 @@
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/module.css" />
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/recruit/view.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
 </head>
 <body>
 	<div class="l-fullsreen">
-		<div class="l-nav">
-			<div class="m-title">
-				<h1>校招系统</h1>	
-				<select name="" id="">
-					<option value="">2015秋季校招</option>
-					<option value="">2015秋季校招1</option>
-					<option value="">2015秋季校招2</option>
-					<option value="">2015秋季校招3</option>
-				</select>
-				<select name="" id="">
-					<option value="">北京</option>
-					<option value="">北京</option>
-					<option value="">北京</option>
-					<option value="">北京</option>
-				</select>
-			</div>
-			<div class="m-nav">
-				<ul class="nav nav-tabs">
-					<li class="active">
-						<a href="#">首页</a>
-					</li>
-					<li><a href="#">面试平台</a></li>
-					<li><a href="#">面试管理</a></li>
-					<li><a href="#">面试学生管理</a></li>
-					<li><a href="#">批次管理</a></li>
-				</ul>
-			</div>
-		</div>
 		<div class="l-container">
 			<div class="l-content">
-				<!-- 内容start -->
 				<div class="l-inner">
 					<div class="m-manage">
 						<div class="m-manage-hd">
-							<button class="btn btn-info" type="button">添加面试官</button>
-							<button class="btn btn-info" type="button">批量导入</button>
+							<button id="doadd" class="btn btn-info" type="button">添加面试官</button>
+							<!--<button class="btn btn-info" type="button">批量导入</button>-->
 						</div>
 						<div class="m-manage-bd">
 							<table class="table  table-striped table-bordered">
@@ -61,52 +35,113 @@
 				                </tr>
 				              </thead>
 				              <tbody>
+				                #foreach($info in $message)
 				                <tr>
-				                  <td>刘玥</td>
-				                  <td>高级技术总监</td>
-				                  <td>是</td>
-				                  <td>是</td>
-				                  <td>是</td>
-				                  <td>6</td>
-				                  <td>2</td>
+				                  <td>$info.userName</td>
+				                  <td>$info.job</td>
+				                  <td>$info.userName</td>
+				                  <td>$info.userName</td>
+				                  <td>$info.userName</td>
+				                  <td>$info.oneCount</td>
+				                  <td>$info.twoCount</td>
 				                  <td>
 				                  	<a href="#">查看</a>
 				                  	<a href="#">删除</a>
 				                  </td>	
 				                </tr>
-			               		<tr>
-				                  <td>刘玥</td>
-				                  <td>高级技术总监</td>
-				                  <td>是</td>
-				                  <td>是</td>
-				                  <td>是</td>
-				                  <td>6</td>
-				                  <td>2</td>
-				                  <td>
-				                  	<a href="#">查看</a>
-				                  	<a href="#">删除</a>
-				                  </td>	
-				                </tr>
-				                <tr>
-				                  <td>刘玥</td>
-				                  <td>高级技术总监</td>
-				                  <td>是</td>
-				                  <td>是</td>
-				                  <td>是</td>
-				                  <td>6</td>
-				                  <td>2</td>
-				                  <td>
-				                  	<a href="#">查看</a>
-				                  	<a href="#">删除</a>
-				                  </td>	
-				                </tr>
+				                #end
 				              </tbody>
 				            </table>
 						</div>
 					</div>
-					
 				</div>
-				<!-- 内容end -->
+				<div id="addform" class="l-inner modal hide fade in" style="display: none;">
+					<div class="modal-header" style="text-align:center">
+        				<a class="close" data-dismiss="modal">×</a>
+        				<h3>添加面试官</h3>
+    				</div>
+					<div class="modal-body">
+						<form class="form-horizontal">
+							<div class="control-group">
+								<label class="control-label" for="name">面试官姓名</label>
+								<div class="controls">
+								  <input type="text" id="userName" placeholder="必填">
+								</div>
+							</div>
+							<div class="control-group">
+								<label class="control-label" for="job">职位</label>
+								<div class="controls">
+								  <input type="password" id="job" placeholder="必填">
+								</div>
+							</div>
+							<div class="control-group">
+								<label class="control-label" for="password">密码</label>
+								<div class="controls">
+								  <input type="password" id="password" placeholder="必填">
+								</div>
+							</div>
+							<div class="control-group">
+								<label class="control-label" for="project">面试项目</label>
+								<div class="controls">
+									<table class="table table-bordered">
+						              <thead>
+						                <tr>
+						                  <th></th>
+						                  <th>初试</th>
+						                  <th>复试</th>
+						                  <th>一次决定权</th>
+						                </tr>
+						              </thead>
+						              <tbody>
+											<tr>
+												<td>RD</td>
+												<td>
+													<input id="firstid" name="firstname" type="checkbox"  value="RD">
+												</td>
+												<td>
+													<input id="secondid" name="secondname" type="checkbox"  value="RD">
+												</td>
+												<td>
+													<input id="finishid" name="finishname" type="checkbox"  value="RD">
+												</td>
+											</tr>
+											<tr>
+												<td>FE</td>
+												<td>
+													<input id="firstid" name="firstname" type="checkbox"  value="FE">
+												</td>
+												<td>
+													<input id="secondid" name="secondname" type="checkbox"  value="FE">
+												</td>
+												<td>
+													<input id="finishid" name="finishname" type="checkbox"  value="FE">
+												</td>
+											</tr>
+											<tr>
+												<td>QA</td>
+												<td>
+													<input id="firstid" name="firstname" type="checkbox"  value="QA">
+												</td>
+												<td>
+													<input id="secondid" name="secondname" type="checkbox"  value="QA">
+												</td>
+												<td>
+													<input id="finishid" name="finishname" type="checkbox"  value="QA">
+												</td>
+											</tr>
+						              </tbody>
+						            </table>
+								</div>
+							</div>
+							<div class="modal-footer" style="text-align:center;">
+								<div>
+								  <button id="addview" type="submit" class="btn ">保存</button>
+								  <button type="submit" class="btn ">取消</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
