--- a/src/main/webapp/WEB-INF/vm/viewer_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_manage.vm
@@ -137,7 +137,7 @@
 							<div class="modal-footer" style="text-align:center;">
 								<div>
 								  <button id="addview" type="button" class="btn ">保存</button>
-								  <button type="button" class="btn ">取消</button>
+								  <button type="button" class="btn " onclick="goBack()">取消</button>
 								</div>
 							</div>
 						</form>
