--- a/src/main/webapp/WEB-INF/vm/viewer_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_manage.vm
@@ -58,7 +58,7 @@
 				</div>
 				<div id="addform" class="l-inner modal hide fade in" style="display: none;">
 					<div class="modal-header" style="text-align:center">
-        				<a class="close" data-dismiss="modal">×</a>
+        				<a class="close" data-dismiss="modal" onclick="goBack()">×</a>
         				<h3>添加面试官</h3>
     				</div>
 					<div class="modal-body">
@@ -145,7 +145,7 @@
 				</div>
 				<div id="updform" class="l-inner modal hide fade in" style="display: none;">
 					<div class="modal-header" style="text-align:center">
-        				<a class="close" data-dismiss="modal">×</a>
+        				<a class="close" data-dismiss="modal" onclick="goBack()">×</a>
         				<h3>修改面试官</h3>
     				</div>
 					<div class="modal-body">
@@ -225,7 +225,7 @@
 							<div class="modal-footer" style="text-align:center;">
 								<div>
 								  <button id="updview" type="button" class="btn ">保存</button>
-								  <button type="button" class="btn ">取消</button>
+								  <button type="button" class="btn " onclick="goBack()">取消</button>
 								</div>
 							</div>
 						</form>
