--- a/src/main/webapp/WEB-INF/vm/hr_index.vm
+++ b/src/main/webapp/WEB-INF/vm/hr_index.vm
@@ -30,7 +30,7 @@
 			<div class="m-nav">
 				<ul class="nav nav-tabs">
 					<li class="active">
-						<a href="#">首页</a>
+						<a href="/login">首页</a>
 					</li>
 					<li><a href="#">面试平台</a></li>
 					<li><a href="javascript:void(0);" id="view_list">面试官管理</a></li>
