--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -21,15 +21,15 @@ body,html{
 }
 .l-container .l-sidebar{
 	float: left;
-	width: 300px;
 	height: 100%;
-	/*background: red;*/
+	width: 260px;
+	display: inline-block;
+	background: #eee;
 }
 .l-container .l-content{
 	position: relative;
 	height: 100%;
 	overflow-y: auto;
-	/*background: blue;*/
 }
 
 .l-inner{
@@ -41,16 +41,12 @@ body,html{
 }
 
 .form-horizontal{
-	/*width: 500px;*/
 	margin:  0 auto;
 }
 .form-horizontal .table th,.form-horizontal .table td{
 	vertical-align: middle;
 	padding: 3px;
 }
-
-
-
 
 
 
