--- a/src/main/webapp/WEB-INF/vm/phase_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/phase_manage.vm
@@ -2,41 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>校招系统</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/module.css" />
+	<title>批次管理</title>
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/static/css/style.css" />
+	<link rel="stylesheet" href="/static/css/module.css" />
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
+	<script type="text/javascript" src="/static/js/recruit/phase.js"></script>
 </head>
 <body>
 	<div class="l-fullsreen">
-		<div class="l-nav">
-			<div class="m-title">
-				<h1>校招系统</h1>	
-				<select name="" id="">
-					<option value="">2015秋季校招</option>
-					<option value="">2015秋季校招1</option>
-					<option value="">2015秋季校招2</option>
-					<option value="">2015秋季校招3</option>
-				</select>
-				<select name="" id="">
-					<option value="">北京</option>
-					<option value="">北京</option>
-					<option value="">北京</option>
-					<option value="">北京</option>
-				</select>
-			</div>
-			<div class="m-nav">
-				<ul class="nav nav-tabs">
-					<li class="active">
-						<a href="#">首页</a>
-					</li>
-					<li><a href="#">面试平台</a></li>
-					<li><a href="#">面试管理</a></li>
-					<li><a href="#">面试学生管理</a></li>
-					<li><a href="#">批次管理</a></li>
-				</ul>
-			</div>
-		</div>
 		<div class="l-container">
 			<div class="l-content">
 				<div class="l-inner">
