--- a/src/main/webapp/WEB-INF/vm/phase_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/phase_manage.vm
@@ -15,7 +15,7 @@
 		<div class="l-container">
 			<div class="l-content">
 				<div class="l-inner">
-					<button class="btn btn-info" type="button">新建批次</button>
+					<button class="btn btn-info" type="button" id="addphase">新建批次</button>
 					<div class="m-table">
 						<table class="table  table-striped table-bordered">
 			              <thead>
