--- a/src/main/webapp/WEB-INF/vm/add_phase.vm
+++ b/src/main/webapp/WEB-INF/vm/add_phase.vm
@@ -3,55 +3,33 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>添加批次</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/module.css" />
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/static/css/style.css" />
+	<link rel="stylesheet" href="/static/css/module.css" />
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
+	<script type="text/javascript" src="/static/js/recruit/phase.js"></script>
 </head>
 <body>
 	<div class="l-fullsreen">
-		<div class="l-nav">
-			<div class="m-title">
-				<h1>校招系统</h1>	
-				<select name="" id="">
-					<option value="">2015秋季校招</option>
-					<option value="">2015秋季校招1</option>
-					<option value="">2015秋季校招2</option>
-					<option value="">2015秋季校招3</option>
-				</select>
-				<select name="" id="">
-					<option value="">北京</option>
-					<option value="">北京</option>
-					<option value="">北京</option>
-					<option value="">北京</option>
-				</select>
-			</div>
-			<div class="m-nav">
-				<ul class="nav nav-tabs">
-					<li class="active">
-						<a href="#">首页</a>
-					</li>
-					<li><a href="#">面试平台</a></li>
-					<li><a href="#">面试管理</a></li>
-					<li><a href="#">面试学生管理</a></li>
-					<li><a href="#">批次管理</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="l-container m-addbatch">
-            <div class="m-addbatch-hd">
-                <div class="form-inline">
-                    <label class="control-label" for="">批次名称</label>
-                    <input type="text" placeholder="必填">
-                    <label class="control-label" for="">城市</label>
-                    <input type="text" class="input-small" placeholder="必填">
-                    <button type="button" class="btn">添加</button>
-                </div>
-            </div>
-			<div class="l-content">
-				<div class="l-inner">
-                    <div class="m-addbatch-bd">
-    					<div class="form-horizontal">
-    						<table class="table">
+		<!-- 内容start -->
+				<div class="l-container m-addbatch">
+					<div class="m-addbatch-hd">
+                		<div class="form-inline">
+                		<label class="control-label" for="">年份</label>
+                    	<input type="text" class="input-small" placeholder="必填">
+                    	<label class="control-label" for="">批次名称</label>
+                    	<input type="text" placeholder="必填">
+                    	<label class="control-label" for="">城市</label>
+                    	<input type="text" class="input-small" placeholder="必填">
+                    	<button type="button" class="btn">添加</button>
+                		</div>
+            		</div>
+            		<div class="l-content">
+            			<div class="l-inner">
+            				<div class="m-addbatch-bd">
+    							<div class="form-horizontal">
+    							<table class="table">
     							<tbody>
     								<tr>
     									<td>北京</td>
@@ -72,43 +50,15 @@
     									</td>
                                         <td><a href="#">删除</a></td>
     				                </tr>
-    				                <tr>
-    									<td>北京</td>
-    									<td><a href="#">添加面试官</a></td>
-    									<td>
-    										<label class="control-label" for="inputEmail">
-    											刘玥
-    											<input class="input-mini" type="text" id="inputEmail" placeholder="房间号">
-    										</label>
-    										
-    									</td>
-                                        <td><a href="#">删除</a></td>
-    				                </tr>
-    				                <tr>
-    									<td>北京</td>
-    									<td><a href="#">添加面试官</a></td>
-    									<td>
-    										<label class="control-label" for="inputEmail">
-    											刘玥
-    											<input class="input-mini" type="text" id="inputEmail" placeholder="房间号">
-    										</label>
-    										<label class="control-label" for="inputEmail">
-    											刘玥
-    											<input class="input-mini" type="text" id="inputEmail" placeholder="房间号">
-    										</label>
-    									</td>
-                                        <td><a href="#">删除</a></td>
-    				                </tr>
     			                </tbody>
-    						</table>
-    						<div class="m-addbatch-btn">
-                                <button type="submit" class="btn btn-success btn-large">保存</button>
-                            </div>    							
+    							</table>
+    							<div class="m-addbatch-btn">
+                                	<button type="submit" class="btn btn-success btn-large">保存</button>
+                            	</div> 
+    							</div>
+    						</div>
     					</div>
-                    </div>
-				</div>
-				<!-- 内容start -->
-				<div class="m-pop alert alert-info">
+				<div class="m-pop alert alert-info" style="display:none">
 					<div class="m-pop-hd">
 						<button type="button" class="close" data-dismiss="alert">&times;</button>
 					</div>
@@ -136,98 +86,6 @@
 							</div>
 
 						</div>
-						<div class="row-fluid">
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
-							<div class="span3">
-								<label class="checkbox inline">
-								  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-								</label>
-							</div>
-							
-						</div>
-                        <div class="row-fluid">
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            
-                        </div>
-                        <div class="row-fluid">
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            
-                        </div>
-                        <div class="row-fluid">
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            <div class="span3">
-                                <label class="checkbox inline">
-                                  <input type="checkbox" id="inlineCheckbox1" value="option1"> 刘玥
-                                </label>
-                            </div>
-                            
-                        </div>
 					</div>
 					<div class="m-pop-ft">
 						<div class="control-group">
@@ -238,10 +96,9 @@
 						</div>
 					</div>
 				</div>
-				
+            		</div>
+				</div>				
 				<!-- 内容end -->
-			</div>
-		</div>
 	</div>
 </body>
 </html>
